--- a/Fronted/src/app/psychologist/pages/workshops/workshops.component.css
+++ b/Fronted/src/app/psychologist/pages/workshops/workshops.component.css
@@ -127,3 +127,17 @@
       object-position: center center;
     } */
   }
+
+  /* Media para tablet */
+  @media (min-width: 768px) and (max-width: 1024px) {
+    
+  }
+
+  /* Media para movil */
+  @media (min-width: 0px) and (max-width: 767px) {
+    #card .imagen,
+    #card .creado
+    {
+      display: none;
+    }
+  }
