--- a/Fronted/src/app/website/components/shared/opinion-card/opinion-card.component.css
+++ b/Fronted/src/app/website/components/shared/opinion-card/opinion-card.component.css
@@ -34,3 +34,25 @@
   font-weight: 900;
   margin-bottom: 60px;
 }
+
+/* Media para tablet */
+@media (min-width: 768px) and (max-width: 1024px) {
+    
+}
+
+/* Media para movil */
+@media (min-width: 0px) and (max-width: 767px) {
+  #opinionCard .content .cards{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    gap: 15px;
+    align-items: center;
+  }
+
+  #opinionCard .content .cards .card{
+    width: 90%;
+  }
+}
