--- a/Fronted/src/app/website/components/social/social.component.css
+++ b/Fronted/src/app/website/components/social/social.component.css
@@ -43,3 +43,15 @@
 .speeddial-delay-demo{
     animation: pulso 2s infinite ease-out; 
 }
+
+/* Media para tablet */
+@media (min-width: 768px) and (max-width: 1024px) {
+    
+}
+
+/* Media para movil */
+@media (min-width: 0px) and (max-width: 767px) {
+  #social-icons{
+    display: none;
+  }
+}
