--- a/Fronted/src/app/website/pages/blog/blog.component.css
+++ b/Fronted/src/app/website/pages/blog/blog.component.css
@@ -99,3 +99,15 @@
     font-weight: bold;
     background-position: left;
 }
+
+/* Media para tablet */
+@media (min-width: 768px) and (max-width: 1024px) {
+    
+}
+
+/* Media para movil */
+@media (min-width: 0px) and (max-width: 767px) {
+    #misCitas .content .citasEstudiante_cancelar{
+        display: none;
+    }
+}
